--- a/index.html
+++ b/index.html
@@ -2,104 +2,16 @@
 
 <html>
     <head>
-        <script>
-            window.onload = function() {
-                const tableData = document.querySelectorAll("td")
-                for (let node of tableData) {
-
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('milestone')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('terminal')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('zoom')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('coffee')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('github')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('html')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('javascript')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('css')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('slack')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-                    node.addEventListener('click',function() {
-                        if (node.classList.contains('keyboard')){
-                            node.style.backgroundColor = 'salmon'
-                        }
-                       node.classList.toggle('selected')
-                    })
-
-                    if (node.textContent != "") continue;
-                    let charCode = Math.round(65 + Math.random() * 25)
-                    node.textContent = String.fromCharCode(charCode)
-                }
-            }
-        </script>
-        <style>
-            h1 {
-                font-family: sans-serif;
-                color: blue;
-                text-align: center;
-            }
-            table {
-                border-collapse: collapse;
-                margin: 0 auto;
-            }
-
-            td {
-                cursor: pointer;
-                border: 1px solid black;
-                width: 20px;
-                height: 20px;
-                text-align: center;
-            }
-
-            td.selected {
-                background: lime;
-            }
-        </style>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Countdown</title>
+        <link rel="stylesheet" href="styles.css">
+        <script type = "text/javascript" src = "script.js"></script>
     </head>
     <body>
         <h1>WordSearch</h1>
+        <p id="countdown"></p>
         <table>
             <tr>
                 <td class='milestone'>M</td>
@@ -122,7 +34,6 @@
                 <td></td>
                 <td></td>
                 <td></td>
-            </tr>
             </tr>
             <tr>
                 <td></td>
