--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Countdown</title>
         <link rel="stylesheet" href="styles.css">
-        <script type = "text/javascript" src = "script.js"></script>
+       
     </head>
     <body>
         <h1>WordSearch</h1>
+        <h2 id = "currentWord"></h2>
         <p id="countdown"></p>
         <table>
             <tr>
@@ -474,4 +475,5 @@
             </ol>
         </ol>
     </body>
+     <script type = "text/javascript" src = "script.js"></script>
 </html>
